height issue on mobile

--- a/css/case-study-interview.css
+++ b/css/case-study-interview.css
@@ -460,11 +460,9 @@ main{
 }
 .vbox > img {
   width: 100%;
-  height: fit-content;
 }
 .hbox > img {
   width: 100%;
-  height: fit-content;
 }
  .quoteBlock .content{
    margin:0;
